samples/_failures_safe/1761499053_cfb6c4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c2670dc7.c: In function ‘main’:
./samples/SAFE/__tmp_c2670dc7.c:159:9: error: expected declaration or statement at end of input
  159 |         printf("Invalid number of edges\n");
      |         ^~~~~~
./samples/SAFE/__tmp_c2670dc7.c:159:9: error: expected declaration or statement at end of input
